# LitList

./: .gitignore  BuildPlan.md  CONTRACTS.md  SPEC.md  render.yaml
.claude/: settings.local.json
.claude/agents/: adversarial-generalist.md  (+5 more)
.github/: dependabot.yml
backend/: .env.example  pyproject.toml
backend/app/: clients.py  config.py  db.py  errors.py  main.py
backend/app/auth/: __init__.py  oauth.py
backend/app/integrations/: icite.py  pubmed.py  zotero.py
backend/app/middleware/: errors.py  ratelimit.py  security.py  session.py
backend/app/models/: __init__.py  crypto.py  entities.py  identity.py  ids.py
backend/app/routes/: _shared.py  decisions.py  export.py  queue.py  saved.py  search.py  zotero.py
backend/app/text/: normalize.py  tokenize.py
backend/tests/: _fakes.py  conftest.py  test_crypto.py  test_db.py  test_decisions_routes.py  test_export.py  test_health.py  test_icite_client.py  test_lifespan_schema.py  test_middleware_csrf.py  test_middleware_errors.py  test_middleware_ratelimit.py  test_normalize.py  test_oauth.py  test_oauth_session_binding.py  test_perf_batching.py  test_pubmed_client.py  test_queue_routes.py  test_saved_routes.py  test_search_routes.py  test_session_identity.py  test_session_middleware.py  test_tokenize.py  test_turso_integration.py  test_zotero.py  test_zotero_routes.py
design/: components.md
fixtures/: README.md
frontend/: .gitignore  eslint.config.js  index.html  lighthouserc.json  lighthouserc.live.json  package-lock.json  package.json  playwright.config.ts  playwright.live.config.ts  vite.config.ts
(+129 files in other folders)
