[project]
name = "litlist-backend"
version = "0.1.0"
description = "LitList backend — FastAPI + SQLModel over SQLite/Turso"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlmodel>=0.0.22",
    "sqlalchemy-libsql>=0.1.0",
    "httpx>=0.27",
    "requests-oauthlib>=2.0",
    "pyzotero>=1.5",
    "cryptography>=43.0",
    "slowapi>=0.1.9",
    "pydantic-settings>=2.5",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "responses>=0.25",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
